--- a/.github/workflows/虚拟第二批15个.yml
+++ b/.github/workflows/虚拟第二批15个.yml
@@ -5,7 +5,7 @@ on:
      - cron: '30 */1 * * *'
 jobs:
   build:
-    runs-on: ubuntu-latest       
+    runs-on: macos-latest       
     steps:
       
       - name: Checkout
